# cxn

./: Cargo.toml  README.md  cxn.yml
docs/design/: 2026-01-18-cxn-connectivity-checker.md
src/: check.rs  cli.rs  config.rs  dns.rs  main.rs  ping.rs
