[package]
name = "cxn"
version = "0.1.0"
edition = "2024"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "A CLI tool for quick ping and DNS connectivity checks"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
dirs = "6.0"
env_logger = "0.11"
eyre = "0.6"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
surge-ping = "0.8"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

[build-dependencies]
