[package]
name = "cxn"
version = "0.1.5"
edition = "2024"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "A CLI tool for quick ping and DNS connectivity checks"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
comfy-table = "7.2.2"
dirs = "6.0"
env_logger = "0.11"
eyre = "0.6"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
indexmap = { version = "2.13.0", features = ["serde"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
surge-ping = "0.8"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }

[build-dependencies]
